Updated testing/polling of available sensors

--- a/windows/windows_data_prototyping.ipynb
+++ b/windows/windows_data_prototyping.ipynb
@@ -15,32 +15,118 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileLoadException",
-     "evalue": "Could not load file or assembly 'file:///c:\\Users\\MacL1\\Documents\\GitHub\\HardwareMonitoring\\windows\\Librehardwaremonitor\\LibreHardwareMonitorLib.dll' or one of its dependencies. Operation is not supported. (Exception from HRESULT: 0x80131515)\r\nFile name: 'file:///c:\\Users\\MacL1\\Documents\\GitHub\\HardwareMonitoring\\windows\\Librehardwaremonitor\\LibreHardwareMonitorLib.dll' ---> System.NotSupportedException: An attempt was made to load an assembly from a network location which would have caused the assembly to be sandboxed in previous versions of the .NET Framework. This release of the .NET Framework does not enable CAS policy by default, so this load may be dangerous. If this load is not intended to sandbox the assembly, please enable the loadFromRemoteSources switch. See http://go.microsoft.com/fwlink/?LinkId=155569 for more information.\r\n   at System.Reflection.RuntimeAssembly._nLoad(AssemblyName fileName, String codeBase, Evidence assemblySecurity, RuntimeAssembly locationHint, StackCrawlMark& stackMark, IntPtr pPrivHostBinder, Boolean throwOnFileNotFound, Boolean forIntrospection, Boolean suppressSecurityChecks)\r\n   at System.Reflection.RuntimeAssembly.InternalLoadAssemblyName(AssemblyName assemblyRef, Evidence assemblySecurity, RuntimeAssembly reqAssembly, StackCrawlMark& stackMark, IntPtr pPrivHostBinder, Boolean throwOnFileNotFound, Boolean forIntrospection, Boolean suppressSecurityChecks)\r\n   at System.Reflection.RuntimeAssembly.InternalLoadFrom(String assemblyFile, Evidence securityEvidence, Byte[] hashValue, AssemblyHashAlgorithm hashAlgorithm, Boolean forIntrospection, Boolean suppressSecurityChecks, StackCrawlMark& stackMark)\r\n   at System.Reflection.Assembly.LoadFrom(String assemblyFile)\r\n   at Python.Runtime.AssemblyManager.LoadAssemblyFullPath(String name)\r\n   at Python.Runtime.CLRModule.AddReference(String name)\r\n\r\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNotSupportedException\u001b[0m                     Traceback (most recent call last)",
-      "\u001b[1;31mNotSupportedException\u001b[0m: An attempt was made to load an assembly from a network location which would have caused the assembly to be sandboxed in previous versions of the .NET Framework. This release of the .NET Framework does not enable CAS policy by default, so this load may be dangerous. If this load is not intended to sandbox the assembly, please enable the loadFromRemoteSources switch. See http://go.microsoft.com/fwlink/?LinkId=155569 for more information.",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mFileLoadException\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sensor_names \u001b[38;5;241m=\u001b[39m \u001b[43mGetWindowsSensorNames\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\MacL1\\Documents\\GitHub\\HardwareMonitoring\\windows\\libre_testing.py:44\u001b[0m, in \u001b[0;36mGetWindowsSensorNames.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m         os\u001b[38;5;241m.\u001b[39m_exit(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# load C# dllls\u001b[39;00m\n\u001b[1;32m---> 44\u001b[0m \u001b[43mclr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAddReference\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetcwd\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mlib_path1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m clr\u001b[38;5;241m.\u001b[39mAddReference(os\u001b[38;5;241m.\u001b[39mgetcwd() \u001b[38;5;241m+\u001b[39m lib_path2)\n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m# You'll get a squiggly line or error indication for an unresolved\u001b[39;00m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# import, don't worry, it will work anyway\u001b[39;00m\n",
-      "\u001b[1;31mFileLoadException\u001b[0m: Could not load file or assembly 'file:///c:\\Users\\MacL1\\Documents\\GitHub\\HardwareMonitoring\\windows\\Librehardwaremonitor\\LibreHardwareMonitorLib.dll' or one of its dependencies. Operation is not supported. (Exception from HRESULT: 0x80131515)\r\nFile name: 'file:///c:\\Users\\MacL1\\Documents\\GitHub\\HardwareMonitoring\\windows\\Librehardwaremonitor\\LibreHardwareMonitorLib.dll' ---> System.NotSupportedException: An attempt was made to load an assembly from a network location which would have caused the assembly to be sandboxed in previous versions of the .NET Framework. This release of the .NET Framework does not enable CAS policy by default, so this load may be dangerous. If this load is not intended to sandbox the assembly, please enable the loadFromRemoteSources switch. See http://go.microsoft.com/fwlink/?LinkId=155569 for more information.\r\n   at System.Reflection.RuntimeAssembly._nLoad(AssemblyName fileName, String codeBase, Evidence assemblySecurity, RuntimeAssembly locationHint, StackCrawlMark& stackMark, IntPtr pPrivHostBinder, Boolean throwOnFileNotFound, Boolean forIntrospection, Boolean suppressSecurityChecks)\r\n   at System.Reflection.RuntimeAssembly.InternalLoadAssemblyName(AssemblyName assemblyRef, Evidence assemblySecurity, RuntimeAssembly reqAssembly, StackCrawlMark& stackMark, IntPtr pPrivHostBinder, Boolean throwOnFileNotFound, Boolean forIntrospection, Boolean suppressSecurityChecks)\r\n   at System.Reflection.RuntimeAssembly.InternalLoadFrom(String assemblyFile, Evidence securityEvidence, Byte[] hashValue, AssemblyHashAlgorithm hashAlgorithm, Boolean forIntrospection, Boolean suppressSecurityChecks, StackCrawlMark& stackMark)\r\n   at System.Reflection.Assembly.LoadFrom(String assemblyFile)\r\n   at Python.Runtime.AssemblyManager.LoadAssemblyFullPath(String name)\r\n   at Python.Runtime.CLRModule.AddReference(String name)\r\n\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensor_names = GetWindowsSensorNames()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sensor type is: Load, sensor name is: CPU Core #1 and the returned value is: 86.5\n",
+      "The sensor type is: Load, sensor name is: CPU Core #2 and the returned value is: 30.9\n",
+      "The sensor type is: Load, sensor name is: CPU Core #3 and the returned value is: 30.2\n",
+      "The sensor type is: Load, sensor name is: CPU Core #4 and the returned value is: 16.4\n",
+      "The sensor type is: Load, sensor name is: CPU Core #5 and the returned value is: 73.1\n",
+      "The sensor type is: Load, sensor name is: CPU Core #6 and the returned value is: 21.4\n",
+      "The sensor type is: Load, sensor name is: CPU Core #7 and the returned value is: 20.5\n",
+      "The sensor type is: Load, sensor name is: CPU Core #8 and the returned value is: 22.4\n",
+      "The sensor type is: Load, sensor name is: CPU Core #9 Thread #1 and the returned value is: 53.9\n",
+      "The sensor type is: Load, sensor name is: CPU Core #9 Thread #2 and the returned value is: 11.2\n",
+      "The sensor type is: Load, sensor name is: CPU Core #10 Thread #1 and the returned value is: 63.3\n",
+      "The sensor type is: Load, sensor name is: CPU Core #10 Thread #2 and the returned value is: 3.2\n",
+      "The sensor type is: Load, sensor name is: CPU Core #11 Thread #1 and the returned value is: 41.0\n",
+      "The sensor type is: Load, sensor name is: CPU Core #11 Thread #2 and the returned value is: 4.7\n",
+      "The sensor type is: Load, sensor name is: CPU Core #12 Thread #1 and the returned value is: 50.0\n",
+      "The sensor type is: Load, sensor name is: CPU Core #12 Thread #2 and the returned value is: 5.3\n",
+      "The sensor type is: Load, sensor name is: CPU Core #13 Thread #1 and the returned value is: 62.7\n",
+      "The sensor type is: Load, sensor name is: CPU Core #13 Thread #2 and the returned value is: 3.1\n",
+      "The sensor type is: Load, sensor name is: CPU Core #14 Thread #1 and the returned value is: 50.9\n",
+      "The sensor type is: Load, sensor name is: CPU Core #14 Thread #2 and the returned value is: 3.6\n",
+      "The sensor type is: Load, sensor name is: CPU Core #15 and the returned value is: 2.8\n",
+      "The sensor type is: Load, sensor name is: CPU Core #16 and the returned value is: 7.4\n",
+      "The sensor type is: Load, sensor name is: CPU Total and the returned value is: 30.2\n",
+      "The sensor type is: Load, sensor name is: CPU Core Max and the returned value is: 86.5\n",
+      "The sensor type is: Temperature, sensor name is: Core Max and the returned value is: 78.0\n",
+      "The sensor type is: Temperature, sensor name is: Core Average and the returned value is: 66.1\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #1 and the returned value is: 63.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #2 and the returned value is: 64.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #3 and the returned value is: 63.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #4 and the returned value is: 63.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #5 and the returned value is: 66.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #6 and the returned value is: 66.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #7 and the returned value is: 66.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #8 and the returned value is: 66.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #9 and the returned value is: 78.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #10 and the returned value is: 74.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #11 and the returned value is: 68.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #12 and the returned value is: 68.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #13 and the returned value is: 65.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #14 and the returned value is: 68.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #15 and the returned value is: 60.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #16 and the returned value is: 60.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Package and the returned value is: 73.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #1 Distance to TjMax and the returned value is: 47.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #2 Distance to TjMax and the returned value is: 46.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #3 Distance to TjMax and the returned value is: 47.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #4 Distance to TjMax and the returned value is: 47.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #5 Distance to TjMax and the returned value is: 44.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #6 Distance to TjMax and the returned value is: 44.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #7 Distance to TjMax and the returned value is: 44.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #8 Distance to TjMax and the returned value is: 44.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #9 Distance to TjMax and the returned value is: 32.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #10 Distance to TjMax and the returned value is: 36.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #11 Distance to TjMax and the returned value is: 42.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #12 Distance to TjMax and the returned value is: 42.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #13 Distance to TjMax and the returned value is: 45.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #14 Distance to TjMax and the returned value is: 42.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #15 Distance to TjMax and the returned value is: 50.0\n",
+      "The sensor type is: Temperature, sensor name is: CPU Core #16 Distance to TjMax and the returned value is: 50.0\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #1 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #2 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #3 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #4 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #5 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #6 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #7 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #8 and the returned value is: 2795.9\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #9 and the returned value is: 4593.3\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #10 and the returned value is: 4593.3\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #11 and the returned value is: 4293.8\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #12 and the returned value is: 4293.8\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #13 and the returned value is: 4293.8\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #14 and the returned value is: 4293.8\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #15 and the returned value is: 1797.4\n",
+      "The sensor type is: Clock, sensor name is: CPU Core #16 and the returned value is: 1897.2\n",
+      "The sensor type is: Power, sensor name is: CPU Package and the returned value is: 43.9\n",
+      "The sensor type is: Power, sensor name is: CPU Cores and the returned value is: 37.1\n",
+      "The sensor type is: Power, sensor name is: CPU Memory and the returned value is: 0.0\n",
+      "The sensor type is: Power, sensor name is: CPU Platform and the returned value is: 88.1\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core and the returned value is: 0.0\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #1 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #2 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #3 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #4 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #5 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #6 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #7 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #8 and the returned value is: 0.8\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #9 and the returned value is: 1.0\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #10 and the returned value is: 1.0\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #11 and the returned value is: 1.0\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #12 and the returned value is: 1.0\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #13 and the returned value is: 1.0\n",
+      "The sensor type is: Voltage, sensor name is: CPU Core #14 and the returned value is: 1.0\n",
+      "The sensor type is: Clock, sensor name is: Bus Speed and the returned value is: 99.9\n"
+     ]
+    }
+   ],
    "source": [
     "sensor_names.get_libre_sensor_labels()"
    ]
